syntax = "proto3";
package input_generator_service.v1;

import "google/protobuf/timestamp.proto";

option go_package = "./input_generator_service;input_generator_servicev1";

service Testcase {
  rpc CreateTestcase (CreateTestcaseReq) returns (stream CreateTestcaseRes);
}

service Preset {
  rpc CreatePreset (PresetCreateRequest) returns (PresetResponse);
  rpc GetPreset (PresetIdRequest) returns (PresetResponse);
  rpc GetAllPresets (PresetListRequest) returns (PresetListResponse);
  rpc UpdatePreset (PresetUpdateRequest) returns (PresetResponse);
  rpc DeletePreset (PresetIdRequest) returns (DeletePresetResponse);
}


message CreateTestcaseReq {
  string account_id = 1;
  string format = 2;
  int32 repeat_count = 3;
}

message CreateTestcaseRes {
  string output = 1;
}


// PRESET
message PresetCreateRequest {
  string preset_name = 1;
  string preset_type = 2;
  string content = 3;
  string account_id = 4; // UUID string
}

message PresetUpdateRequest {
  string preset_id = 1;
  string preset_name = 2;
  string preset_type = 3;
  string content = 4;
  string account_id = 5;
}

message PresetIdRequest {
  string preset_id = 1;
}

message PresetListRequest {
  string account_id = 1;
  int32 page = 2;
  int32 size = 3;
}

message PresetResponse {
  string preset_id = 1;
  string preset_name = 2;
  string preset_type = 3;
  string content = 4;
  string account_id = 5;
  google.protobuf.Timestamp create_dt = 6;
  google.protobuf.Timestamp update_dt = 7;
}

message PresetListResponse {
  repeated PresetResponse presets = 1;
  int32 maxPage = 2;
  int32 totalCount = 3;
  int32 currentPage = 4;
}

message DeletePresetResponse {
  bool success = 1;
}
